--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^3.1",
+        "dompdf/dompdf": "^3.1",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "laravel/ui": "^4.6"
+        "laravel/ui": "^4.6",
+        "phpoffice/phpword": "^1.3",
+        "setasign/fpdi": "^2.6",
+        "setasign/fpdi-fpdf": "^2.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
