--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/ui": "^4.6",
         "phpoffice/phpword": "^1.3",
         "setasign/fpdi": "^2.6",
-        "setasign/fpdi-fpdf": "^2.3"
+        "setasign/fpdi-fpdf": "^2.3",
+        "symfony/process": "^7.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
